/*
 * Copyright (c) 2014, Francis Galiegue (fgaliegue@gmail.com)
 *
 * This software is dual-licensed under:
 *
 * - the Lesser General Public License (LGPL) version 3.0 or, at your option, any
 *   later version;
 * - the Apache Software License (ASL) version 2.0.
 *
 * The text of this file and of both licenses is available at the root of this
 * project or, if you have the jar distribution, in directory META-INF/, under
 * the names LGPL-3.0.txt and ASL-2.0.txt respectively.
 *
 * Direct link to the sources:
 *
 * - LGPL 3.0: https://www.gnu.org/licenses/lgpl-3.0.txt
 * - ASL 2.0: http://www.apache.org/licenses/LICENSE-2.0.txt
 */

plugins {
    id "java-library"
    id "maven-publish"
    id "signing"
    id "idea"
    id "eclipse"
    id "com.github.ben-manes.versions" version "0.51.0"
}

group = "com.github.java-json-tools"
version = "1.14-SNAPSHOT"
description = "JSON Patch (RFC 6902) and JSON Merge Patch (RFC 7386) implementation in Java"

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
    withSourcesJar()
    withJavadocJar()
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    api "com.github.java-json-tools:jackson-coreutils:2.0-SNAPSHOT"
    api "com.github.java-json-tools:msg-simple:1.2"
    api "com.google.code.findbugs:jsr305:3.0.2"
    
    testImplementation "org.testng:testng:7.9.0"
    testImplementation "org.assertj:assertj-core:3.25.3"
    testImplementation "org.mockito:mockito-core:5.11.0"
}

test {
    useTestNG()
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat = "full"
    }
}

javadoc {
    options.links("https://docs.oracle.com/en/java/javase/17/docs/api/")
}

task testJar(type: Jar) {
    archiveClassifier = "tests"
    from sourceSets.test.output
}

configurations {
    tests
}

artifacts {
    tests testJar
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            
            artifact testJar
            
            pom {
                name = "JSON Patch"
                description = "JSON Patch (RFC 6902) and JSON Merge Patch (RFC 7386) implementation in Java"
                url = "https://github.com/java-json-tools/json-patch"
                
                licenses {
                    license {
                        name = "Lesser General Public License, version 3 or greater"
                        url = "http://www.gnu.org/licenses/lgpl.html"
                        distribution = "repo"
                    }
                    license {
                        name = "Apache Software License, version 2.0"
                        url = "http://www.apache.org/licenses/LICENSE-2.0"
                        distribution = "repo"
                    }
                }
                
                scm {
                    url = "https://github.com/java-json-tools/json-patch"
                    connection = "scm:git:git://github.com/java-json-tools/json-patch"
                    developerConnection = "scm:git:git@github.com:java-json-tools/json-patch"
                }
                
                developers {
                    developer {
                        id = "fge"
                        name = "Francis Galiegue"
                        email = "fgaliegue@gmail.com"
                    }
                }
            }
        }
    }
    
    repositories {
        maven {
            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
            def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
            
            credentials {
                username = project.hasProperty('ossrhUsername') ? ossrhUsername : "N/A"
                password = project.hasProperty('ossrhPassword') ? ossrhPassword : "N/A"
            }
        }
    }
}

signing {
    required { gradle.taskGraph.hasTask("publish") }
    sign publishing.publications.mavenJava
}


